--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hugo-base16-theme"]
-	path = themes/hugo-base16-theme
-	url = https://github.com/keanemind/hugo-base16-theme.git
+[submodule "themes/personal-hugo-theme"]
+	path = themes/personal-hugo-theme
+	url = git@github.com:keanemind/personal-hugo-theme.git
