--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseURL = "https://www.keanenguyen.com/"
 languageCode = "en-us"
 title = "Keane Nguyen"
 theme = "personal-hugo-theme"
+googleAnalytics = "UA-145709082-1"
 
 [params]
   faviconURL = "img/favicon.png"
