--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.keanenguyen.com/"
+baseURL = "https://www.keane.dev/"
 languageCode = "en-us"
 title = "Keane Nguyen"
 theme = "personal-hugo-theme"
